--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -164,18 +164,27 @@ div.gallery-album-image img {
 }
 
 div.gallery-album-text {
-  /* position: relative; */
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
   padding: 1em 0;
-  font-weight: bold;
 }
 
 div.gallery-album-text::before {
   content: "「";
+  display: block;
   font-size: 2rem;
+}
+
+div.gallery-album-text-content {
+  font-weight: bold;
 }
 
 div.gallery-album-text::after {
   content: "」";
+  display: block;
   font-size: 2rem;
 }
 
