--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -22,7 +22,8 @@
 body {
   background: var(--color-2);
   font-size: 16px;
-  font-family: Roboto, "Noto Sans", "Noto Sans CJK", Helvetica, Arial, sans-serif;
+  /* font-family: Roboto, "Noto Sans", "Noto Sans CJK", Helvetica, Arial, sans-serif; */
+  font-family: "Roboto Slab", "Noto Serif", "Noto Serif CJK", serif;
   color: var(--color-4);
   margin: 0;
   padding: 0;
