--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -28,11 +28,13 @@ body {
   color: var(--color-4);
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: stretch;
-  align-items: stretch;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 a {
@@ -118,8 +120,14 @@ body::before {
 
 div.container {
   max-width: 80vw;
-  /* Center alignment. */
-  margin: 0 auto;
+  /* Take the whole window. */
+  min-height: 100vh;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .timeline {
@@ -136,7 +144,7 @@ div.gallery-album {
   width: 100%;
 }
 
-.gallery-date {
+.gallery-created {
   /**
    * Absolute elements are placed relative to non-static parent element, so here
    * must be relative.
@@ -144,7 +152,7 @@ div.gallery-album {
   position: relative;
 }
 
-.gallery-date::before {
+.gallery-created::before {
   content: "";
   position: absolute;
   width: var(--timeline-dot-size);
