--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -25,6 +25,7 @@ body {
   /* font-family: Roboto, "Noto Sans", "Noto Sans CJK", Helvetica, Arial, sans-serif; */
   font-family: "Roboto Slab", "Noto Serif", "Noto Serif CJK", serif;
   font-weight: bold;
+  line-height: 2;
   color: var(--color-4);
   margin: 0;
   padding: 0;
