--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -245,21 +245,25 @@ div.gallery-album-authors {
 }
 
 nav.pagination {
-  font-size: 1.5em;
-  display: block;
-  padding: 1rem 0;
+  padding: 0.5em 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: flex-start;
 }
 
 a.page-number {
-  display: inline-block;
-  padding: 0.3em 0.5em;
-  margin: 0.1em 0.25em;
+  display: block;
+  font-size: 1.25rem;
+  padding: 0.1em 0.5em;
+  margin: 0.1em 0.5em;
+  text-decoration: none;
   border-bottom: 0.15em solid var(--color-4);
 }
 
 a.page-number.current {
   border-top: 0.1em solid var(--color-4);
-  border-bottom: 0.15em solid var(--color-4);
 }
 
 div.info {
